--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     compile 'com.github.pengrad:java-telegram-bot-api:4.1.0'
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.12.v20180830'
 
+    compile 'org.apache.logging.log4j:log4j-api:2.10.0'
+    compile 'org.apache.logging.log4j:log4j-core:2.10.0'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
