--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     // https://mvnrepository.com/artifact/commons-cli/commons-cli
     compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
 
+    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
+    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '1.2.0'
+
     compile 'com.github.pengrad:java-telegram-bot-api:4.1.0'
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.12.v20180830'
 
