--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,8 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-core:2.10.0'
 
     testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
-    testCompile group: 'junit', name: 'junit-dep', version: '4.10'
+    
+    testCompile group: 'junit', name: 'junit', version: '4.10'
     testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '1.9.+'
 }
