Basic Latin encoding, test were added

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 //create a single Jar with all dependencies
 task fatJar(type: Jar) {
+    dependsOn("build")
     manifest {
         attributes 'Implementation-Title': '',
                 'Implementation-Version': version,
