--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-api:2.10.0'
     compile 'org.apache.logging.log4j:log4j-core:2.10.0'
 
+    compile 'com.zaxxer:HikariCP:2.6.1'
+
     testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
     
     testCompile group: 'junit', name: 'junit', version: '4.10'
